--- a/p1/index.html
+++ b/p1/index.html
@@ -7,13 +7,14 @@
   </head>
   <body>
     <div class="main" v-cloak>
+      <button class='reset' v-on:click="resetGame">Reset game</button>
       <div>Can you outsmart a computer?</div>
       <button class='play' v-on:click="selectChoice">rock</button>
       <button class='play' v-on:click="selectChoice">paper</button>
       <button class='play' v-on:click="selectChoice">scissors</button>
       <div class="aar" v-bind:class="{win: outcome==='win', lose: outcome==='lose'}" v-if="outcome">{{ lastGameResult }}</div>
-      <score-board v-bind:player-wins="playerWins" v-bind:computer-Wins="computerWins"></score-board>
-      <button class='reset' v-on:click="resetGame">Reset game</button>
+      <div>Game History</div>
+      <game-history v-bind:history="history"></game-history>
     </div>
   </body>
 </html>
